@@ -62,6 +62,7 @@ Application Fixes:
 - Vehicle mods can now properly be sold in career mode.
 - Changing metatypes in Create mode no longer sometimes keeps old initiative and movement speed values.
 - Instead of a global option to hide charts in the Karma and Nuyen tab in Career mode, charts are hidden by default and are only shown when checking a checkbox in the Karma and Nuyen tab.
+- Chummer now displays an error message if it cannot load a picture/portrait/mugshot instead of crashing.
 
 Data Changes:
 - Removed legacy nodes for Street Scum Priority values that caused incorrect nuyen amounts.
@@ -139,6 +140,7 @@ Changed/New Strings:
 - String_UpgradedRating
 - Message_DeleteVehicleMod
 - Checkbox_ShowChart
+- Message_File_Cannot_Be_Read_Accessed
 
 Build 212
 Application Changes:
